# tartan-weaver

./: .gitignore  README.md  pyproject.toml  setup.py
notes/: Pillow Tartan .ipynb  TartanColours.ipynb
pyweave/: main.py
tartan_weaver/: __init__.py  colours.py  tartan.py  utils.py  weaver.py
tests/: test_colours.py  test_tartan.py
