[tool.poetry]
name = "tartan-weaver"
version = "0.1.0"
description = "Creating Tartan images"
authors = ["drummonds <hum3@drummond.info>"]

[tool.poetry.dependencies]
python = "^3.8"
svgwrite = "^1.4.2"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
